--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                         <p class="about__description">I'm a passionate & proactive human with strong expertise in Machine/Deep Learning, Full-Stack Web Development, I have a proven track record of facilitating efficient engineering solutions in the development and deployment phases of projects in a variety of fields. I am an Engineer by education and a programmer by passion. I am currently seeking an opportunity, where I can use my skills to the fullest and further hone it.</p>
                     </div>
 
-                    <!--<div class="about__buttons">
+                    <div class="about__buttons">
                         <a download="Ankith_resume.pdf" href="assets\pdf\Ankith_resume.pdf" class="button button--flex">
                             Download CV<i class="uil uil-file-download button__icon"></i>
                         </a>
-                    </div>-->
+                    </div>
                 </div>
             </section>
 
